code/tui/snapshots/fullscreen/state/bigmodel_subscription_key_prompt.snap
---
source: code/tui/src/app/state_tests.rs
expression: screen
---
  .                                                                        [— / —] [Dashboard]

            ┌── BigModel › API key ────────────────────────────────────────────[✗]─┐
            │                                                                      │
            │  Enter the API key from your BigModel                                │
            │  ╭─────────────────────────────────────────────────────────────────╮ │
            │  │ ••••••••••••••                                                  │ │
            │  ╰─────────────────────────────────────────────────────────────────╯ │
            │                                                                      │
            │                                                                      │
            │                                                                      │
            │                                                                      │
            │                                                                      │
            │                                                                      │
            │                                                                      │
            │                                                                      │
            │                                                                      │
            │                                                                      │
            │                                                                      │
  ╭─────────│  Enter to save  ·  Esc to cancel                                     │─────────╮
  │ > Build └──────────────────────────────────────────────────────────────────────┘         │
  ╰──────────────────────────────────────────────────────────────────────── Automatic model ─╯
