code/tui/snapshots/fullscreen/state/chatgpt_external_login_required.snap
---
source: code/tui/src/app/state_tests.rs
expression: screen
---
  .                                                                                [Dashboard]








          ┌── ChatGPT subscription › Error ──────────────────────────────────────[✗]─┐
          │                                                                          │
          │  Sign in to ChatGPT in Codex, then reconnect here.                       │
          │                                                                          │
          └──────────────────────────────────────────────────────────────────────────┘





  ────────────────────────────────────────────────────────────────────────────────────────────
  > Build anything
  ─────────────────────────────────────────────────────────────────────────── Automatic model

  Enter/Esc to close
