code/tui/snapshots/fullscreen/state/chatgpt_subscription_auto_models_chinese.snap
---
source: code/tui/src/app/state_tests.rs
expression: updated
---
  .                                                                                   [仪表盘]

            ┌── 配置 › ChatGPT 订阅 ───────────────────────────────────────────[✗]─┐
            │                                                                      │
            │> 账户  ·  person@example.com                                         │
            │  计划  ·  pro                                                        │
            │                                                                      │
            │  模型 ────────────────────────────────────────────────────────────── │
            │  GPT Next                                                            │
            │                                                                      │
            │                                                                      │
            │                                                                      │
            │                                                                      │
            │                                                                      │
            │                                                                      │
            │                                                                      │
            │                                                                      │
            │                                                                      │
            │                                                                      │
  ──────────│  Esc 返回  ·  l 退出登录                                             │──────────
  > 构建任何└──────────────────────────────────────────────────────────────────────┘
  ────────────────────────────────────────────────────────────────────────────────── 自动模型
