code/tui/snapshots/fullscreen/state/chatgpt_subscription_reconnected.snap
---
source: code/tui/src/app/state_tests.rs
expression: reconnected
---
  .                                                                                [Dashboard]

            ┌── Config › ChatGPT subscription ─────────────────────────────────[✗]─┐
            │                                                                      │
            │> Account  ·  person@example.test                                     │
            │                                                                      │
            │  Models ──────────────────────────────────────────────────────────── │
            │  No models available                                                 │
            │                                                                      │
            │                                                                      │
            │                                                                      │
            │                                                                      │
            │                                                                      │
            │                                                                      │
            │                                                                      │
            │                                                                      │
            │                                                                      │
            │                                                                      │
            │                                                                      │
  ──────────│  Esc to return  ·  l to sign out                                     │──────────
  > Build an└──────────────────────────────────────────────────────────────────────┘
  ─────────────────────────────────────────────────────────────────────────── Automatic model
