code/tui/snapshots/fullscreen/state/config_advisor_settings.snap
---
source: code/tui/src/app/state_tests.rs
expression: rendered
---
  .                                                                [Dashboard]  
                                                                                
        ┌── Config › Advisor ──────────────────────────────────────[✗]─┐        
        │                                                              │        
        │> Enable Advisor                                        Off + │        
        │  Advisor model                              Choose a model + │        
        │                                                              │        
        │                                                              │        
        │                                                              │        
        │                                                              │        
        │                                                              │        
        │                                                              │        
        │                                                              │        
        │                                                              │        
        │                                                              │        
        │                                                              │        
        │                                                              │        
        │                                                              │        
        │                                                              │        
  ──────│  Enter/Space change · ←/→ details · Esc return               │──────  
  > Buil└──────────────────────────────────────────────────────────────┘        
  ─────────────────────────────────────────────────────────── Automatic model
