code/tui/snapshots/fullscreen/state/config_english_punctuation_chinese.snap
---
source: code/tui/src/app/state_tests.rs
expression: render_dictation_frame(&app)
---
  .                                                                   [仪 表 盘 ]  
                                                                                
        ┌── 配 置  ──────────────────────────────────────────────────[✗]─┐        
        │                                                              │        
        │   通 用     提 供 商     议 题     网 络                              │        
        │                                                              │        
        │  ╭─────────────────────────────────────────────────────────╮ │        
        │  │ 搜 索 配 置                                                 │ │        
        │  ╰─────────────────────────────────────────────────────────╯ │        
        │  8 项  上 方                                                    │        
        │  屏 幕 模 式                                        fullscreen   │        
        │  记 忆                                                  关 闭  + │        
        │  自 动 获 取  Git 更 新                                     关 闭  + │        
        │  Git 获 取 间 隔                                          180s   │        
        │  Git 分 支 标 识                                     Powerline   │        
        │  顾 问                                                  关 闭    │        
        │> 输 入 时 使 用 英 文 标 点                                    开 启  + │        
        │  听 写 快 捷 键                                             off   │        
        │  听 写 按 键                                            ctrl+g   │        
  ──────└──────────────────────────────────────────────────────────────┘──────  
  > 构 建 任 何 内 容                                                                 
  ────────────────────────────────────────────────────────────────── 自 动 模 型    
                                                                                
  Enter 更 改  · r 重 置  · ←/→ 详 情  · Tab 标 签 页  · / 搜 索  · Esc 关 闭
