code/tui/snapshots/fullscreen/state/config_english_punctuation_details_chinese.snap
---
source: code/tui/src/app/state_tests.rs
expression: details
---
  .                                                                   [仪 表 盘 ]  
                                                                                
        ┌── 配 置  ──────────────────────────────────────────────────[✗]─┐        
        │                                                              │        
        │   通 用     提 供 商     议 题     网 络                              │        
        │                                                              │        
        │  ╭─────────────────────────────────────────────────────────╮ │        
        │  │ 搜 索 配 置                                                 │ │        
        │  ╰─────────────────────────────────────────────────────────╯ │        
        │  12 项  上 方                                                   │        
        │  顾 问                                                  关 闭    │        
        │> 始 终 使 用 半 角 标 点 （ 仅 中 文 ）                            开 启  - │        
        │    将 键 入 的 中 文 标 点 转 为 半 角 ， 支 持 按 住  Shift 输 入 。            │        
        │    支 持 这 些 键 盘 标 点 的 全 角 形 式 ：                               │        
        │    !"#$%&'()*+,-./:;<=>?@[\]^_`{|}~                          │        
        │    其 他 转 换 ： 、 →/  。 →.  【 】 →[]  “”→"  ‘’→'                 │        
        │    中 文 文 字 、 其 他 符 号 、 粘 贴 内 容 和 已 有 文 本 保 持 原 样 。           │        
        │  听 写 快 捷 键                                             off   │        
        │  听 写 按 键                                            ctrl+g   │        
  ──────└──────────────────────────────────────────────────────────────┘──────  
  > 构 建 任 何 内 容                                                                 
  ────────────────────────────────────────────────────────────────── 自 动 模 型    
                                                                                
  Enter 更 改  · r 重 置  · ←/→ 详 情  · Tab 标 签 页  · / 搜 索  · Esc 关 闭
